--- a/CanHazFunny/CanHazFunny/CanHazFunny.csproj
+++ b/CanHazFunny/CanHazFunny/CanHazFunny.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <LangVersion>9</LangVersion>
   </PropertyGroup>
 
 </Project>
